--- a/LinkerPlayer/Styles/SolidColorBrushes.xaml
+++ b/LinkerPlayer/Styles/SolidColorBrushes.xaml
@@ -1,65 +1,84 @@
 ﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:sys="clr-namespace:System;assembly=mscorlib">
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
-    <SolidColorBrush x:Key="PlayerButtonBorderBrush" Color="{DynamicResource PlayerButtonBorderColor}" />
-    <SolidColorBrush x:Key="PlayerButtonBorderDarkBrush" Color="{DynamicResource PlayerButtonBorderDark}" />
-    <SolidColorBrush x:Key="PlayerButtonGradientStartBrush" Color="{DynamicResource PlayerButtonGradientStart}" />
-    <SolidColorBrush x:Key="PlayerButtonMouseOverBorderBrush" Color="{DynamicResource PlayerButtonMouseOverBorderColor}" />
-    <SolidColorBrush x:Key="PlayerButtonMouseOverBackgroundBrush" Color="{DynamicResource PlayerButtonMouseOverBackground}" />
+  <SolidColorBrush x:Key="TitleBarForegroundBrush" Color="{DynamicResource TitleBarForegroundColor}" />
+  <SolidColorBrush x:Key="TitleBarBackgroundBrush" Color="{DynamicResource TitleBarBackgroundColor}" />
 
-    <SolidColorBrush x:Key="PlayerInactiveBrush" Color="{DynamicResource PlayerInactiveColor}" />
-    <SolidColorBrush x:Key="PlayerActiveBrush" Color="{DynamicResource PlayerActiveColor}" />
-    <SolidColorBrush x:Key="PlayerStartGradient" Color="{DynamicResource PlayStartGradientColor}" />
-    <SolidColorBrush x:Key="PlayerEndGradient" Color="{DynamicResource PlayEndGradientColor}" />
+  <SolidColorBrush x:Key="ControlPrimaryAccentBrush" Color="{DynamicResource ControlPrimaryAccentColor}" />
+  <SolidColorBrush x:Key="ControlSecondaryAccentBrush" Color="{DynamicResource ControlSecondaryAccentColor}" />
+  <SolidColorBrush x:Key="ControlDisabledBrush" Color="{DynamicResource ControlDisabledColor}" />
 
-    <SolidColorBrush x:Key="ListItemForeground" Color="{DynamicResource DefaultItemForeground}" />
-    <SolidColorBrush x:Key="ListViewItemBackground" Color="{DynamicResource ListViewItemBackgroundBrush}" />
-    <SolidColorBrush x:Key="ListViewItemForeground" Color="{DynamicResource ListViewItemForegroundBrush}" />
+  <SolidColorBrush x:Key="DefaultTextBrush" Color="{DynamicResource DefaultTextColor}" />
 
-    <SolidColorBrush x:Key="FirstColorNormal" Color="{DynamicResource FirstColorBrush}" />
-    <SolidColorBrush x:Key="FirstColorLight" Color="{DynamicResource FirstColorLightBrush}" />
-    <SolidColorBrush x:Key="PrimaryBackgroundColor" Color="{DynamicResource PrimaryBackgroundColor}" />
-    <SolidColorBrush x:Key="SecondBackground" Color="{DynamicResource SecondBackgroundBrush}" />
-    <SolidColorBrush x:Key="StandardTextColor" Color="{DynamicResource StandardTextForeground}" />
-    <SolidColorBrush x:Key="FirstItemBackground" Color="{DynamicResource FirstBackgroundBrush}" />
+  <SolidColorBrush x:Key="MainWindowGradientStartBrush" Color="{DynamicResource MainWindowGradientStartColor}" />
+  <SolidColorBrush x:Key="MainWindowGradientEndBrush" Color="{DynamicResource MainWindowGradientEndColor}" />
 
-    <SolidColorBrush x:Key="PlaylistBackground" Color="{DynamicResource PlaylistBackgroundBrush}" />
-    <SolidColorBrush x:Key="PlaylistItemBackground" Color="{DynamicResource PlaylistItemBackgroundBrush}" />
-    <SolidColorBrush x:Key="PlaylistInsertBrush" Color="{DynamicResource PlaylistInsertColor}" />
-    <SolidColorBrush x:Key="PlayListTipBackground" Color="{DynamicResource PlayListTipBackgroundColor}" />
-    <SolidColorBrush x:Key="PlayListTipForeground" Color="{DynamicResource PlayListTipForegroundColor}" />
+  <SolidColorBrush x:Key="FirstDarkBrush" Color="{DynamicResource FirstDarkColor}" />
+  <SolidColorBrush x:Key="FirstLightBrush" Color="{DynamicResource FirstLightColor}" />
+  <SolidColorBrush x:Key="FirstBackgroundBrush" Color="{DynamicResource FirstBackgroundColor}" />
+  <SolidColorBrush x:Key="PrimaryBackgroundBrush" Color="{DynamicResource PrimaryBackgroundColor}" />
+  <SolidColorBrush x:Key="SecondBackgroundBrush" Color="{DynamicResource SecondBackgroundColor}" />
+  <SolidColorBrush x:Key="StandardTextForegroundBrush" Color="{DynamicResource StandardTextForegroundColor}" />
+  <SolidColorBrush x:Key="InactiveSelectionBrush" Color="{DynamicResource InactiveSelectionColor}" />
 
-    <SolidColorBrush x:Key="ImageBackgroundBrush" Color="{DynamicResource ImageBackgroundColor}" />
+  <SolidColorBrush x:Key="PlaylistItemForegroundBrush" Color="{DynamicResource PlaylistItemForegroundColor}" />
+  <SolidColorBrush x:Key="PlaylistItemBackgroundBrush" Color="{DynamicResource PlaylistItemBackgroundColor}" />
+  <SolidColorBrush x:Key="PlaylistMouseOverItemForegroundBrush" Color="{DynamicResource PlaylistMouseOverItemForegroundColor}" />
+  <SolidColorBrush x:Key="PlaylistMouseOverItemBackgroundBrush" Color="{DynamicResource PlaylistMouseOverItemBackgroundColor}" />
 
-    <SolidColorBrush x:Key="MenuBrush" Color="{DynamicResource MenuColor}" />
-    <SolidColorBrush x:Key="MenuTextBrush" Color="{DynamicResource MenuTextColor}" />
-    <SolidColorBrush x:Key="MenuDisabledTextBrush" Color="{DynamicResource MenuDisabledTextForeGround}" />
-    <SolidColorBrush x:Key="MenuHoverBrush" Color="{DynamicResource MenuHoverColor}" />
-    <SolidColorBrush x:Key="MenuSelectionBrush" Color="{DynamicResource MenuSelectionColor}" />
-    <SolidColorBrush x:Key="MenuHighlightBrush" Color="{DynamicResource MenuHighlightColor}" />
+  <SolidColorBrush x:Key="NewPlaylistButtonForegroundBrush" Color="{DynamicResource NewPlaylistButtonForegroundColor}" />
+  <SolidColorBrush x:Key="NewPlaylistButtonBackgroundBrush" Color="{DynamicResource NewPlaylistButtonBackgroundColor}" />
+  <SolidColorBrush x:Key="NewPlaylistButtonMouseOverForegroundBrush" Color="{DynamicResource NewPlaylistButtonMouseOverForegroundColor}" />
+  <SolidColorBrush x:Key="NewPlaylistButtonMouseOverBackgroundBrush" Color="{DynamicResource NewPlaylistButtonMouseOverBackgroundColor}" />
+  <SolidColorBrush x:Key="NewPlaylistNamePopupForegroundBrush" Color="{DynamicResource NewPlaylistNamePopupForegroundColor}" />
+  <SolidColorBrush x:Key="NewPlaylistNamePopupBackgroundBrush" Color="{DynamicResource NewPlaylistNamePopupBackgroundColor}" />
 
-    <SolidColorBrush x:Key="GridAlternateBrush" Color="{DynamicResource GridAlternateColor}" />
-    <SolidColorBrush x:Key="GridSelectionBrush" Color="{DynamicResource GridSelectionColor}" />
-    <SolidColorBrush x:Key="GridSelectionTextBrush" Color="{DynamicResource GridSelectionTextColor}" />
-    <SolidColorBrush x:Key="InactiveSelectionBrush" Color="{DynamicResource InactiveSelectionColor}" />
+  <SolidColorBrush x:Key="TrackListColumnHeaderForegroundBrush" Color="{DynamicResource TrackListColumnHeaderForegroundColor}" />
+  <SolidColorBrush x:Key="TrackListColumnHeaderBackgroundBrush" Color="{DynamicResource TrackListColumnHeaderBackgroundColor}" />
+  <SolidColorBrush x:Key="TrackListItemForegroundBrush" Color="{DynamicResource TrackListItemForegroundColor}" />
+  <SolidColorBrush x:Key="TrackListItemBackgroundBrush" Color="{DynamicResource TrackListItemBackgroundColor}" />
+  <SolidColorBrush x:Key="TrackListMouseOverItemForegroundBrush" Color="{DynamicResource TrackListMouseOverItemForegroundColor}" />
+  <SolidColorBrush x:Key="TrackListMouseOverItemBackgroundBrush" Color="{DynamicResource TrackListMouseOverItemBackgroundColor}" />
+  <SolidColorBrush x:Key="TrackListTipForegroundBrush" Color="{DynamicResource TrackListTipForegroundColor}" />
+  <SolidColorBrush x:Key="TrackListTipBackgroundBrush" Color="{DynamicResource TrackListListTipBackgroundColor}" />
 
-    <SolidColorBrush x:Key="SpectrumBackground" Color="{DynamicResource SpectrumBackgroundColor}" />
-    <SolidColorBrush x:Key="SpectrumStartBrush" Color="{DynamicResource SpectrumStartColor}" />
-    <SolidColorBrush x:Key="SpectrumEndBrush" Color="{DynamicResource SpectrumEndColor}" />
-    <SolidColorBrush x:Key="SpectrumLineBrush" Color="{DynamicResource SpectrumLineColor}" />
+  <SolidColorBrush x:Key="PlayerForegroundBrush" Color="{DynamicResource PlayerForegroundColor}" />
+  <SolidColorBrush x:Key="PlayerBackgroundBrush" Color="{DynamicResource PlayerBackgroundColor}" />
+  <SolidColorBrush x:Key="PlayerActiveBrush" Color="{DynamicResource PlayerActiveColor}" />
+  <SolidColorBrush x:Key="PlayerStartGradientBrush" Color="{DynamicResource PlayStartGradientColor}" />
+  <SolidColorBrush x:Key="PlayerEndGradientBrush" Color="{DynamicResource PlayEndGradientColor}" />
 
-    <sys:Double x:Key="FontSizeLarge">11</sys:Double>
-    <sys:Double x:Key="FontSizeBiggest">11</sys:Double>
-    <sys:Double x:Key="FontSizeBigger">11</sys:Double>
-    <sys:Double x:Key="FontSizeBig">10</sys:Double>
-    <sys:Double x:Key="FontSizeNormal">10</sys:Double>
-    <sys:Double x:Key="FontSizeSmall">9</sys:Double>
-    <sys:Double x:Key="FontSizeSmaller">8</sys:Double>
-    <sys:Double x:Key="FontSizeSmallest">7</sys:Double>
-    <sys:Double x:Key="AlbumSize">100</sys:Double>
-    <sys:Double x:Key="ControlPadding">2</sys:Double>
-    <Thickness x:Key="ControlPaddingMargin">2</Thickness>
+  <SolidColorBrush x:Key="PlayPauseButtonBrush" Color="{DynamicResource PlayPauseButtonColor}" />
+  <SolidColorBrush x:Key="PlayPauseButtonPressedBrush" Color="{DynamicResource PlayPauseButtonPressedColor}" />
+
+  <SolidColorBrush x:Key="MenuTextForegroundBrush" Color="{DynamicResource MenuTextForegroundColor}" />
+  <SolidColorBrush x:Key="MenuDisabledTextBrush" Color="{DynamicResource MenuDisabledTextColor}" />
+  <SolidColorBrush x:Key="MenuBrush" Color="{DynamicResource MenuColor}" />
+  <SolidColorBrush x:Key="MenuTextBrush" Color="{DynamicResource MenuTextColor}" />
+  <SolidColorBrush x:Key="MenuHoverBrush" Color="{DynamicResource MenuHoverColor}" />
+  <SolidColorBrush x:Key="MenuSelectionBrush" Color="{DynamicResource MenuSelectionColor}" />
+  <SolidColorBrush x:Key="MenuHighlightBrush" Color="{DynamicResource MenuHighlightColor}" />
+
+  <SolidColorBrush x:Key="ImageBackgroundBrush" Color="{DynamicResource ImageBackgroundColor}" />
+
+  <SolidColorBrush x:Key="SpectrumBackgroundBrush" Color="{DynamicResource SpectrumBackgroundColor}" />
+  <SolidColorBrush x:Key="SpectrumStartBrush" Color="{DynamicResource SpectrumStartColor}" />
+  <SolidColorBrush x:Key="SpectrumEndBrush" Color="{DynamicResource SpectrumEndColor}" />
+  <SolidColorBrush x:Key="SpectrumLineBrush" Color="{DynamicResource SpectrumLineColor}" />
+
+  <sys:Double x:Key="FontSizeLarge">11</sys:Double>
+  <sys:Double x:Key="FontSizeBiggest">11</sys:Double>
+  <sys:Double x:Key="FontSizeBigger">11</sys:Double>
+  <sys:Double x:Key="FontSizeBig">10</sys:Double>
+  <sys:Double x:Key="FontSizeNormal">10</sys:Double>
+  <sys:Double x:Key="FontSizeSmall">9</sys:Double>
+  <sys:Double x:Key="FontSizeSmaller">8</sys:Double>
+  <sys:Double x:Key="FontSizeSmallest">7</sys:Double>
+  <sys:Double x:Key="AlbumSize">100</sys:Double>
+  <sys:Double x:Key="ControlPadding">2</sys:Double>
+  <Thickness x:Key="ControlPaddingMargin">2</Thickness>
 
 </ResourceDictionary>
+
