--- a/LinkerPlayer/Themes/Blue.xaml
+++ b/LinkerPlayer/Themes/Blue.xaml
@@ -1,57 +1,70 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-    <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
+  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
 
-    <Color x:Key="FirstDarkColor">SteelBlue</Color>
-    <Color x:Key="FirstLightColor">LightSteelBlue</Color>
-    <Color x:Key="FirstBackgroundColor">#253656</Color>
-    <Color x:Key="PrimaryBackgroundColor">SteelBlue</Color>
-    <Color x:Key="SecondBackgroundColor">SteelBlue</Color>
-    <Color x:Key="StandardTextForegroundColor">#4682B4</Color>
-    <Color x:Key="InactiveSelectionColor">#666666</Color>
+  <Color x:Key="MainWindowGradientStartColor">#597080</Color>
+  <Color x:Key="MainWindowGradientEndColor">#597080</Color>
 
-    <Color x:Key="GridAlternateColor">#3C5A8C</Color>
-    <Color x:Key="GridSelectionColor">#909090</Color>
-    <Color x:Key="GridSelectionTextColor">White</Color>
+  <Color x:Key="ControlPrimaryAccentColor">Cyan</Color>
+  <Color x:Key="ControlSecondaryAccentColor">DarkCyan</Color>
+  <Color x:Key="ControlDisabledColor">Gray</Color>
 
-    <Color x:Key="ListItemForegroundColor">#C0E0FA</Color>
-    <Color x:Key="ListViewItemBackgroundColor">#3C5A8C</Color>
-    <Color x:Key="ListViewItemForegroundColor">#E0EAFF</Color>
+  <Color x:Key="DefaultTextColor">Black</Color>
 
-    <Color x:Key="PlaylistBackgroundColor">#253656</Color>
-    <Color x:Key="PlaylistItemBackgroundColor">#3C5A8C</Color>
-    <Color x:Key="PlaylistInsertColor">#5078BA</Color>
-    <Color x:Key="PlayListTipBackgroundColor">#0D1923</Color>
-    <Color x:Key="PlayListTipForegroundColor">#808080</Color>
+  <Color x:Key="FirstDarkColor">SteelBlue</Color>
+  <Color x:Key="FirstLightColor">LightSteelBlue</Color>
+  <Color x:Key="FirstBackgroundColor">SteelBlue</Color>
+  <Color x:Key="PrimaryBackgroundColor">White</Color>
+  <Color x:Key="SecondBackgroundColor">White</Color>
+  <Color x:Key="StandardTextForegroundColor">SteelBlue</Color>
+  <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
-    <Color x:Key="PlayerInactiveColor">Gray</Color>
-    <Color x:Key="PlayerActiveColor">White</Color>
-    <Color x:Key="PlayStartGradientColor">#253656</Color>
-    <Color x:Key="PlayEndGradientColor">#3C5A8C</Color>
+  <Color x:Key="PlaylistItemForegroundColor">Black</Color>
+  <Color x:Key="PlaylistItemBackgroundColor">SteelBlue</Color>
+  <Color x:Key="PlaylistMouseOverItemForegroundColor">White</Color>
+  <Color x:Key="PlaylistMouseOverItemBackgroundColor">LightSteelBlue</Color>
+  <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
 
-    <Color x:Key="PlayerButtonBorderColor">#a0a0a0</Color>
-    <Color x:Key="PlayerButtonBorderDarkColor">#A0A0A0</Color>
-    <Color x:Key="PlayerButtonGradientStartColor">#506099</Color>
-    <Color x:Key="PlayerButtonGradientEndColor">#9999AC</Color>
-    <Color x:Key="PlayerButtonPressedGradientStartColor">#333346</Color>
-    <Color x:Key="PlayerButtonPressedGradientStopColor">#5A5A6A</Color>
-    <Color x:Key="PlayerButtonMouseOverBorderColor">SteelBlue</Color>
-    <Color x:Key="PlayerButtonMouseOverBackground">#44445A</Color>
+  <Color x:Key="NewPlaylistButtonForegroundColor">SteelBlue</Color>
+  <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
+  <Color x:Key="NewPlaylistButtonMouseOverForegroundColor">#597080</Color>
+  <Color x:Key="NewPlaylistButtonMouseOverBackgroundColor">Transparent</Color>
+  <Color x:Key="NewPlaylistNamePopupForegroundColor">WhiteSmoke</Color>
+  <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
-    <Color x:Key="MenuTextForegroundColor">#000000</Color>
-    <Color x:Key="MenuDisabledTextColor">#808080</Color>
-    <Color x:Key="MenuColor">#1A263D</Color>
-    <Color x:Key="MenuTextColor">LightGray</Color>
-    <Color x:Key="MenuHoverColor">White</Color>
-    <Color x:Key="MenuSelectionColor">WhiteSmoke</Color>
-    <Color x:Key="MenuHighlightColor">White</Color>
+  <Color x:Key="TrackListColumnHeaderForegroundColor">Black</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">LightSteelBlue</Color>
+  <Color x:Key="TrackListItemForegroundColor">Black</Color>
+  <Color x:Key="TrackListItemBackgroundColor">LightSteelBlue</Color>
+  <Color x:Key="TrackListMouseOverItemForegroundColor">Black</Color>
+  <Color x:Key="TrackListMouseOverItemBackgroundColor">LightSteelBlue</Color>
+  <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
+  <Color x:Key="TrackListTipBackgroundColor">LightSteelBlue</Color>
+  <Color x:Key="TrackListTipForegroundColor">Black</Color>
 
-    <Color x:Key="ImageBackgroundColor">Gray</Color>
+  <Color x:Key="PlayerForegroundColor">Black</Color>
+  <Color x:Key="PlayerBackgroundColor">#597080</Color>
+  <Color x:Key="PlayerActiveColor">DarkGray</Color>
+  <Color x:Key="PlayStartGradientColor">#FFFFFF</Color>
+  <Color x:Key="PlayEndGradientColor">#FFFFFF</Color>
 
-    <Color x:Key="SpectrumBackgroundColor">#3A4A7A</Color>
-    <Color x:Key="SpectrumStartColor">Steelblue</Color>
-    <Color x:Key="SpectrumEndColor">Yellow</Color>
-    <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
+  <Color x:Key="PlayPauseButtonColor">#EBEBEB</Color>
+  <Color x:Key="PlayPauseButtonPressedColor">#888888</Color>
+
+  <Color x:Key="MenuTextForegroundColor">#999999</Color>
+  <Color x:Key="MenuDisabledTextColor">#999999</Color>
+  <Color x:Key="MenuColor">#FDFDFD</Color>
+  <Color x:Key="MenuTextColor">Gray</Color>
+  <Color x:Key="MenuHoverColor">LightSteelBlue</Color>
+  <Color x:Key="MenuSelectionColor">Black</Color>
+  <Color x:Key="MenuHighlightColor">Black</Color>
+
+  <Color x:Key="ImageBackgroundColor">White</Color>
+
+  <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
+  <Color x:Key="SpectrumStartColor">SteelBlue</Color>
+  <Color x:Key="SpectrumEndColor">Yellow</Color>
+  <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
 
 </ResourceDictionary>
