--- a/LinkerPlayer/Themes/Dark.xaml
+++ b/LinkerPlayer/Themes/Dark.xaml
@@ -1,57 +1,70 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-    <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
+  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
 
-    <Color x:Key="FirstDarkColor">LightSteelBlue</Color>
-    <Color x:Key="FirstLightColor">LightSteelBlue</Color>
-    <Color x:Key="FirstBackgroundColor">#555555</Color>
-    <Color x:Key="PrimaryBackgroundColor">White</Color>
-    <Color x:Key="SecondBackgroundColor">White</Color>
-    <Color x:Key="StandardTextForegroundColor">#4682B4</Color>
-    <Color x:Key="InactiveSelectionColor">Gray</Color>
+  <Color x:Key="MainWindowGradientStartColor">#3B4951</Color>
+  <Color x:Key="MainWindowGradientEndColor">#3B4951</Color>
 
-    <Color x:Key="GridAlternateColor">#6A6A6A</Color>
-    <Color x:Key="GridSelectionColor">#6B95A8</Color>
-    <Color x:Key="GridSelectionTextColor">White</Color>
+  <Color x:Key="ControlPrimaryAccentColor">LightGray</Color>
+  <Color x:Key="ControlSecondaryAccentColor">MediumPurple</Color>
+  <Color x:Key="ControlDisabledColor">Gray</Color>
 
-    <Color x:Key="ListItemForegroundColor">#E0E0E0</Color>
-    <Color x:Key="ListViewItemBackgroundColor">#6A6A6A</Color>
-    <Color x:Key="ListViewItemForegroundColor">#EAEAEA</Color>
+  <Color x:Key="DefaultTextColor">Black</Color>
 
-    <Color x:Key="PlaylistBackgroundColor">#555555</Color>
-    <Color x:Key="PlaylistItemBackgroundColor">#6A6A6A</Color>
-    <Color x:Key="PlaylistInsertColor">#5078BA</Color>
-    <Color x:Key="PlayListTipBackgroundColor">#0D1923</Color>
-    <Color x:Key="PlayListTipForegroundColor">#808080</Color>
+  <Color x:Key="FirstDarkColor">LightSteelBlue</Color>
+  <Color x:Key="FirstLightColor">LightSteelBlue</Color>
+  <Color x:Key="FirstBackgroundColor">#555555</Color>
+  <Color x:Key="PrimaryBackgroundColor">White</Color>
+  <Color x:Key="SecondBackgroundColor">White</Color>
+  <Color x:Key="StandardTextForegroundColor">#4682B4</Color>
+  <Color x:Key="InactiveSelectionColor">Gray</Color>
 
-    <Color x:Key="PlayerInactiveColor">Black</Color>
-    <Color x:Key="PlayerActiveColor">White</Color>
-    <Color x:Key="PlayStartGradientColor">#303030</Color>
-    <Color x:Key="PlayEndGradientColor">#505050</Color>
+  <Color x:Key="PlaylistItemForegroundColor">White</Color>
+  <Color x:Key="PlaylistItemBackgroundColor">White</Color>
+  <Color x:Key="PlaylistMouseOverItemForegroundColor">White</Color>
+  <Color x:Key="PlaylistMouseOverItemBackgroundColor">White</Color>
+  <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
 
-    <Color x:Key="PlayerButtonBorderColor">#a0a0a0</Color>
-    <Color x:Key="PlayerButtonBorderDarkColor">DarkGray</Color>
-    <Color x:Key="PlayerButtonGradientStartColor">#DDDDDD</Color>
-    <Color x:Key="PlayerButtonGradientEndColor">#FFFFFF</Color>
-    <Color x:Key="PlayerButtonPressedGradientStartColor">#B0B0B0</Color>
-    <Color x:Key="PlayerButtonPressedGradientStopColor">#C0C0C0</Color>
-    <Color x:Key="PlayerButtonMouseOverBorderColor">SteelBlue</Color>
-    <Color x:Key="PlayerButtonMouseOverBackgroundColor">Gray</Color>
+  <Color x:Key="NewPlaylistButtonForegroundColor">SteelBlue</Color>
+  <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
+  <Color x:Key="NewPlaylistButtonMouseOverForegroundColor">#597080</Color>
+  <Color x:Key="NewPlaylistButtonMouseOverBackgroundColor">Transparent</Color>
+  <Color x:Key="NewPlaylistNamePopupForegroundColor">WhiteSmoke</Color>
+  <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
-    <Color x:Key="MenuTextForegroundColor">#CCCCCC</Color>
-    <Color x:Key="MenuDisabledTextColor">#808080</Color>
-    <Color x:Key="MenuColor">Gray</Color>
-    <Color x:Key="MenuTextColor">LightGray</Color>
-    <Color x:Key="MenuHighlightColor">#DDDDDD</Color>
-    <Color x:Key="MenuHoverColor">White</Color>
-    <Color x:Key="MenuSelectionColor">WhiteSmoke</Color>
+  <Color x:Key="TrackListColumnHeaderForegroundColor">Black</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">White</Color>
+  <Color x:Key="TrackListItemForegroundColor">White</Color>
+  <Color x:Key="TrackListItemBackgroundColor">White</Color>
+  <Color x:Key="TrackListMouseOverItemForegroundColor">White</Color>
+  <Color x:Key="TrackListMouseOverItemBackgroundColor">White</Color>
+  <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
+  <Color x:Key="TrackListTipBackgroundColor">#A0A4A8</Color>
+  <Color x:Key="TrackListTipForegroundColor">#F0F0F0</Color>
 
-    <Color x:Key="ImageBackgroundColor">DarkGray</Color>
+  <Color x:Key="PlayerForegroundColor">Black</Color>
+  <Color x:Key="PlayerBackgroundColor">Black</Color>
+  <Color x:Key="PlayerActiveColor">White</Color>
+  <Color x:Key="PlayStartGradientColor">#303030</Color>
+  <Color x:Key="PlayEndGradientColor">#505050</Color>
 
-    <Color x:Key="SpectrumBackgroundColor">#464646</Color>
-    <Color x:Key="SpectrumStartColor">Steelblue</Color>
-    <Color x:Key="SpectrumEndColor">Yellow</Color>
-    <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
+  <Color x:Key="PlayPauseButtonColor">#DDDDDD</Color>
+  <Color x:Key="PlayPauseButtonPressedColor">#A0A0A0</Color>
+
+  <Color x:Key="MenuTextForegroundColor">#CCCCCC</Color>
+  <Color x:Key="MenuDisabledTextColor">#808080</Color>
+  <Color x:Key="MenuColor">Gray</Color>
+  <Color x:Key="MenuTextColor">LightGray</Color>
+  <Color x:Key="MenuHighlightColor">#DDDDDD</Color>
+  <Color x:Key="MenuHoverColor">White</Color>
+  <Color x:Key="MenuSelectionColor">WhiteSmoke</Color>
+
+  <Color x:Key="ImageBackgroundColor">DarkGray</Color>
+
+  <Color x:Key="SpectrumBackgroundColor">#464646</Color>
+  <Color x:Key="SpectrumStartColor">Steelblue</Color>
+  <Color x:Key="SpectrumEndColor">Yellow</Color>
+  <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
 
 </ResourceDictionary>
