--- a/LinkerPlayer/Themes/Gray.xaml
+++ b/LinkerPlayer/Themes/Gray.xaml
@@ -1,57 +1,70 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-    <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
+  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
 
-    <Color x:Key="FirstDarkColor">SteelBlue</Color>
-    <Color x:Key="FirstLightColor">LightSteelBlue</Color>
-    <Color x:Key="FirstBackgroundColor">#FAFAFA</Color>
-    <Color x:Key="PrimaryBackgroundColor">#FAFAFA</Color>
-    <Color x:Key="SecondBackgroundColor">#F0F0F0</Color>
-    <Color x:Key="StandardTextForeground">#4000000</Color>
-    <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
+  <Color x:Key="MainWindowGradientStartColor">#EEF1F5</Color>
+  <Color x:Key="MainWindowGradientEndColor">#EEF1F5</Color>
 
-    <Color x:Key="GridAlternateColor">WhiteSmoke</Color>
-    <Color x:Key="GridSelectionColor">#CBE8F6</Color>
-    <Color x:Key="GridSelectionTextColor">Black</Color>
+  <Color x:Key="ControlPrimaryAccentColor">#673AB7</Color>
+  <Color x:Key="ControlSecondaryAccentColor">#3B2A5A</Color>
+  <Color x:Key="ControlDisabledColor">Gray</Color>
 
-    <Color x:Key="ListItemForegroundColor">#000000</Color>
-    <Color x:Key="ListViewItemBackgroundColor">#FAFAFA</Color>
-    <Color x:Key="ListViewItemForegroundColor">#000000</Color>
+  <Color x:Key="DefaultTextColor">Black</Color>
 
-    <Color x:Key="PlaylistBackgroundColor">#FFFFFF</Color>
-    <Color x:Key="PlaylistItemBackgroundColor">#FFFFFF</Color>
-    <Color x:Key="PlaylistInsertColor">#6B7B82</Color>
-    <Color x:Key="PlayListTipBackgroundColor">#545C63</Color>
-    <Color x:Key="PlayListTipForegroundColor">#D0D0D0</Color>
+  <Color x:Key="FirstDarkColor">SteelBlue</Color>
+  <Color x:Key="FirstLightColor">LightSteelBlue</Color>
+  <Color x:Key="FirstBackgroundColor">#FAFAFA</Color>
+  <Color x:Key="PrimaryBackgroundColor">#FAFAFA</Color>
+  <Color x:Key="SecondBackgroundColor">#F0F0F0</Color>
+  <Color x:Key="StandardTextForeground">#4000000</Color>
+  <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
-    <Color x:Key="PlayStartGradientColor">#D0D0D0</Color>
-    <Color x:Key="PlayEndGradientColor">#EAEAEA</Color>
-    <Color x:Key="PlayerInactiveColor">Gray</Color>
-    <Color x:Key="PlayerActiveColor">DarkGray</Color>
+  <Color x:Key="PlaylistItemForegroundColor">White</Color>
+  <Color x:Key="PlaylistItemBackgroundColor">White</Color>
+  <Color x:Key="PlaylistMouseOverItemForegroundColor">White</Color>
+  <Color x:Key="PlaylistMouseOverItemBackgroundColor">White</Color>
+  <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
 
-    <Color x:Key="PlayerButtonBorderColor">#a0a0a0</Color>
-    <Color x:Key="PlayerButtonBorderDarkColor">DarkGray</Color>
-    <Color x:Key="PlayerButtonGradientStartColor">#DDDDDD</Color>
-    <Color x:Key="PlayerButtonGradientEndColor">#FFFFFF</Color>
-    <Color x:Key="PlayerButtonPressedGradientStartColor">#B0B0B0</Color>
-    <Color x:Key="PlayerButtonPressedGradientStopColor">#C0C0C0</Color>
-    <Color x:Key="PlayerButtonMouseOverBorderColor">SteelBlue</Color>
-    <Color x:Key="PlayerButtonMouseOverBackgroundColor">Gray</Color>
+  <Color x:Key="NewPlaylistButtonForegroundColor">SteelBlue</Color>
+  <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
+  <Color x:Key="NewPlaylistButtonMouseOverForegroundColor">#597080</Color>
+  <Color x:Key="NewPlaylistButtonMouseOverBackgroundColor">Transparent</Color>
+  <Color x:Key="NewPlaylistNamePopupForegroundColor">WhiteSmoke</Color>
+  <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
-    <Color x:Key="MenuTextForegroundColor">#000000</Color>
-    <Color x:Key="MenuDisabledTextColor">#808080</Color>
-    <Color x:Key="MenuColor">WhiteSmoke</Color>
-    <Color x:Key="MenuTextColor">Gray</Color>
-    <Color x:Key="MenuHoverColor">LightSteelBlue</Color>
-    <Color x:Key="MenuSelectionColor">Black</Color>
-    <Color x:Key="MenuHighlightColor">#606060</Color>
+  <Color x:Key="TrackListColumnHeaderForegroundColor">Black</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">White</Color>
+  <Color x:Key="TrackListItemForegroundColor">White</Color>
+  <Color x:Key="TrackListItemBackgroundColor">White</Color>
+  <Color x:Key="TrackListMouseOverItemForegroundColor">White</Color>
+  <Color x:Key="TrackListMouseOverItemBackgroundColor">White</Color>
+  <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
+  <Color x:Key="TrackListTipBackgroundColor">#A0A4A8</Color>
+  <Color x:Key="TrackListTipForegroundColor">#F0F0F0</Color>
 
-    <Color x:Key="ImageBackgroundColor">White</Color>
+  <Color x:Key="PlayerForegroundColor">Black</Color>
+  <Color x:Key="PlayerBackgroundColor">Gray</Color>
+  <Color x:Key="PlayerActiveColor">DarkGray</Color>
+  <Color x:Key="PlayStartGradientColor">#D0D0D0</Color>
+  <Color x:Key="PlayEndGradientColor">#EAEAEA</Color>
 
-    <Color x:Key="SpectrumBackgroundColor">#DDDDDD</Color>
-    <Color x:Key="SpectrumStartColor">Steelblue</Color>
-    <Color x:Key="SpectrumEndColor">Yellow</Color>
-    <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
+  <Color x:Key="PlayPauseButtonColor">#DDDDDD</Color>
+  <Color x:Key="PlayPauseButtonPressedColor">#A0A0A0</Color>
+
+  <Color x:Key="MenuTextForegroundColor">#000000</Color>
+  <Color x:Key="MenuDisabledTextColor">#808080</Color>
+  <Color x:Key="MenuColor">WhiteSmoke</Color>
+  <Color x:Key="MenuTextColor">Gray</Color>
+  <Color x:Key="MenuHoverColor">LightSteelBlue</Color>
+  <Color x:Key="MenuSelectionColor">Black</Color>
+  <Color x:Key="MenuHighlightColor">#606060</Color>
+
+  <Color x:Key="ImageBackgroundColor">White</Color>
+
+  <Color x:Key="SpectrumBackgroundColor">#DDDDDD</Color>
+  <Color x:Key="SpectrumStartColor">Steelblue</Color>
+  <Color x:Key="SpectrumEndColor">Yellow</Color>
+  <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
 
 </ResourceDictionary>
