--- a/LinkerPlayer/Themes/Light.xaml
+++ b/LinkerPlayer/Themes/Light.xaml
@@ -1,57 +1,70 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-    <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
+  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
 
-    <Color x:Key="FirstDarkColor">SteelBlue</Color>
-    <Color x:Key="FirstLightColor">LightSteelBlue</Color>
-    <Color x:Key="FirstBackgroundColor">White</Color>
-    <Color x:Key="PrimaryBackgroundColor">White</Color>
-    <Color x:Key="SecondBackgroundColor">White</Color>
-    <Color x:Key="StandardTextForegroundColor">SteelBlue</Color>
-    <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
+  <Color x:Key="MainWindowGradientStartColor">#EEF1F5</Color>
+  <Color x:Key="MainWindowGradientEndColor">#EEF1F5</Color>
 
-    <Color x:Key="GridAlternateColor">WhiteSmoke</Color>
-    <Color x:Key="GridSelectionColor">#CBE8F6</Color>
-    <Color x:Key="GridSelectionTextColor">Black</Color>
+  <Color x:Key="ControlPrimaryAccentColor">#673AB7</Color>
+  <Color x:Key="ControlSecondaryAccentColor">#3B2A5A</Color>
+  <Color x:Key="ControlDisabledColor">Gray</Color>
 
-    <Color x:Key="ListItemForegroundColor">#555555</Color>
-    <Color x:Key="ListViewItemBackgroundColor">White</Color>
-    <Color x:Key="ListViewItemForegroundColor">#666666</Color>
+  <Color x:Key="DefaultTextColor">Black</Color>
 
-    <Color x:Key="PlaylistBackgroundColor">White</Color>
-    <Color x:Key="PlaylistItemBackgroundColor">White</Color>
-    <Color x:Key="PlaylistInsertColor">#6B7B82</Color>
-    <Color x:Key="PlayListTipBackgroundColor">#A0A4A8</Color>
-    <Color x:Key="PlayListTipForegroundColor">#F0F0F0</Color>
+  <Color x:Key="FirstDarkColor">SteelBlue</Color>
+  <Color x:Key="FirstLightColor">LightSteelBlue</Color>
+  <Color x:Key="FirstBackgroundColor">White</Color>
+  <Color x:Key="PrimaryBackgroundColor">White</Color>
+  <Color x:Key="SecondBackgroundColor">White</Color>
+  <Color x:Key="StandardTextForegroundColor">SteelBlue</Color>
+  <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
-    <Color x:Key="PlayerInactiveColor">Gray</Color>
-    <Color x:Key="PlayerActiveColor">DarkGray</Color>
-    <Color x:Key="PlayStartGradientColor">#FFFFFF</Color>
-    <Color x:Key="PlayEndGradientColor">#FFFFFF</Color>
+  <Color x:Key="PlaylistItemForegroundColor">Black</Color>
+  <Color x:Key="PlaylistItemBackgroundColor">White</Color>
+  <Color x:Key="PlaylistMouseOverItemForegroundColor">Black</Color>
+  <Color x:Key="PlaylistMouseOverItemBackgroundColor">LightGray</Color>
+  <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
 
-    <Color x:Key="PlayerButtonBorderColor">#a0a0a0</Color>
-    <Color x:Key="PlayerButtonBorderDarkColor">DarkGray</Color>
-    <Color x:Key="PlayerButtonGradientStartColor">#DDDDDD</Color>
-    <Color x:Key="PlayerButtonGradientEndColor">#FFFFFF</Color>
-    <Color x:Key="PlayerButtonPressedGradientStartColor">#A0A0A0</Color>
-    <Color x:Key="PlayerButtonPressedGradientStopColor">#C0C0C0</Color>
-    <Color x:Key="PlayerButtonMouseOverBorderColor">SteelBlue</Color>
-    <Color x:Key="PlayerButtonMouseOverBackgroundColor">#E0E0E0</Color>
+  <Color x:Key="NewPlaylistButtonForegroundColor">Gray</Color>
+  <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
+  <Color x:Key="NewPlaylistButtonMouseOverForegroundColor">Black</Color>
+  <Color x:Key="NewPlaylistButtonMouseOverBackgroundColor">Transparent</Color>
+  <Color x:Key="NewPlaylistNamePopupForegroundColor">WhiteSmoke</Color>
+  <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
-    <Color x:Key="MenuTextForegroundColor">#999999</Color>
-    <Color x:Key="MenuDisabledTextColor">#999999</Color>
-    <Color x:Key="MenuColor">#FDFDFD</Color>
-    <Color x:Key="MenuTextColor">Gray</Color>
-    <Color x:Key="MenuHoverColor">LightSteelBlue</Color>
-    <Color x:Key="MenuSelectionColor">Black</Color>
-    <Color x:Key="MenuHighlightColor">Black</Color>
+  <Color x:Key="TrackListColumnHeaderForegroundColor">Black</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">White</Color>
+  <Color x:Key="TrackListItemForegroundColor">Black</Color>
+  <Color x:Key="TrackListItemBackgroundColor">White</Color>
+  <Color x:Key="TrackListMouseOverItemForegroundColor">Black</Color>
+  <Color x:Key="TrackListMouseOverItemBackgroundColor">White</Color>
+  <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
+  <Color x:Key="TrackListTipBackgroundColor">White</Color>
+  <Color x:Key="TrackListTipForegroundColor">Black</Color>
 
-    <Color x:Key="ImageBackgroundColor">White</Color>
+  <Color x:Key="PlayerForegroundColor">Black</Color>
+  <Color x:Key="PlayerBackgroundColor">WhiteSmoke</Color>
+  <Color x:Key="PlayerActiveColor">DarkGray</Color>
+  <Color x:Key="PlayStartGradientColor">White</Color>
+  <Color x:Key="PlayEndGradientColor">White</Color>
 
-    <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
-    <Color x:Key="SpectrumStartColor">SteelBlue</Color>
-    <Color x:Key="SpectrumEndColor">Yellow</Color>
-    <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
+  <Color x:Key="PlayPauseButtonColor">#EBEBEB</Color>
+  <Color x:Key="PlayPauseButtonPressedColor">#888888</Color>
+
+  <Color x:Key="MenuTextForegroundColor">#999999</Color>
+  <Color x:Key="MenuDisabledTextColor">#999999</Color>
+  <Color x:Key="MenuColor">#FDFDFD</Color>
+  <Color x:Key="MenuTextColor">Gray</Color>
+  <Color x:Key="MenuHoverColor">LightSteelBlue</Color>
+  <Color x:Key="MenuSelectionColor">Black</Color>
+  <Color x:Key="MenuHighlightColor">Black</Color>
+
+  <Color x:Key="ImageBackgroundColor">White</Color>
+
+  <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
+  <Color x:Key="SpectrumStartColor">SteelBlue</Color>
+  <Color x:Key="SpectrumEndColor">Yellow</Color>
+  <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
 
 </ResourceDictionary>
