--- a/LinkerPlayer/UserControls/FunctionButtons.xaml
+++ b/LinkerPlayer/UserControls/FunctionButtons.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="60"
@@ -117,7 +118,7 @@
                     Width="50"
                     Height="50"
                     Padding="10"
-                    Background="#212128"
+                    Background="Transparent"
                     BorderBrush="Transparent"
                     Click="LoadFileButton_Click">
                     <Grid>
