--- a/LinkerPlayer/UserControls/PlaylistList.xaml
+++ b/LinkerPlayer/UserControls/PlaylistList.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
     d:DesignHeight="45"
@@ -33,10 +32,10 @@
 
                             <Button.ContextMenu>
                                 <ContextMenu
-                                    Background="#212121"
+                                    Background="{DynamicResource MenuBrush}"
                                     FontFamily="Segoe UI"
                                     FontWeight="DemiBold"
-                                    Foreground="#BDBDBD">
+                                    Foreground="{DynamicResource MenuTextBrush}">
                                     <MenuItem Click="MenuItem_Click" Header="Add song(s)" />
                                     <MenuItem Click="MenuItem_Click" Header="Rename" />
                                     <MenuItem Click="MenuItem_Click" Header="Remove playlist" />
@@ -48,14 +47,14 @@
                             <Trigger Property="IsMouseOver" Value="False">
                                 <Setter TargetName="RowElement" Property="Background">
                                     <Setter.Value>
-                                        <SolidColorBrush Color="{DynamicResource PlaylistItemBackgroundBrush}" />
+                                        <SolidColorBrush Color="{DynamicResource PlaylistItemBackgroundColor}" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter TargetName="RowElement" Property="Background">
                                     <Setter.Value>
-                                        <SolidColorBrush Color="Red" />
+                                        <SolidColorBrush Color="{DynamicResource PlaylistMouseOverItemBackgroundColor}" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
@@ -112,7 +111,7 @@
         <userControls:NewPlaylistButton
             Grid.Row="0"
             Grid.Column="1"
-            Margin="0,20,0,0" />
+            Margin="0,24,0,0" />
 
     </Grid>
 </UserControl>
