--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -12,7 +12,7 @@
     MinWidth="800"
     MinHeight="450"
     AllowsTransparency="True"
-    Background="{DynamicResource FirstBackgroundBrush}"
+    Background="Red"
     Closed="Window_Closed"
     Closing="Window_Closing"
     FontFamily="{materialDesign:MaterialDesignFont}"
@@ -23,7 +23,7 @@
     StateChanged="Window_StateChanged"
     TextElement.FontSize="14"
     TextElement.FontWeight="Medium"
-    TextElement.Foreground="{DynamicResource StandardTextForegroundBrush}"
+    TextElement.Foreground="{DynamicResource DefaultTextBrush}"
     WindowStyle="None"
     mc:Ignorable="d">
 
@@ -34,8 +34,8 @@
     <Grid Focusable="True">
         <Grid.Background>
             <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
-                <GradientStop Color="{DynamicResource PlayStartGradientColor}" />
-                <GradientStop Offset="1" Color="Black" />
+                <GradientStop Color="{DynamicResource MainWindowGradientStartColor}" />
+                <GradientStop Offset="1" Color="{DynamicResource MainWindowGradientEndColor}" />
             </LinearGradientBrush>
         </Grid.Background>
 
